[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.15.2",
    "beautifulsoup4>=4.13.3",
    "numpy>=2.2.4",
    "pandas>=2.2.3",
    "plotly>=6.0.1",
    "psycopg2-binary>=2.9.10",
    "requests>=2.32.3",
    "sendgrid>=6.11.0",
    "sqlalchemy>=2.0.40",
    "streamlit>=1.44.0",
    "trafilatura>=2.0.0",
    "twilio>=9.5.1",
]
